<?xml version="1.0"?>
<package format="2">
  <name>lanefollowing</name>
  <version>0.0.0</version>
  <description>The lanefollowing package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>opencv4</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <exec_depend>opencv4</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
