<?xml version="1.0"?>
<package format="2">
  <name>lane_tracer</name>
  <version>0.0.1</version>
  <description>The lane_tracer package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>

  <build_depend>roslint</build_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
